--- a/_gh_pages/index.html
+++ b/_gh_pages/index.html
@@ -116,7 +116,7 @@ section {
 		list-style: none;
 		padding: 8px;
 		width: 323px;
-		height: auto !important;
+		height: 350px !important;
 		margin: auto;
 		border: none !important;
 		font-family: Arial, Helvetica, sans-serif;
