--- a/_gh_pages/index.html
+++ b/_gh_pages/index.html
@@ -151,7 +151,7 @@ section {
 					<a class="prod-url-title" href="https://www.amazon.com{{ _data.url }}&tag=feeling-primey-20" target="_blank" rel="nofollow">
 						<span class="prod-title" style="text-align: left;" itemprop="name">{{ _data.title | truncate:42}}</span><br>
 					</a>
-					<span class="prod-ranking">{{ _data.rank }} in {{ _data.topLevelCategory }}</span><br>
+					<span class="prod-ranking"><strong style="font-size: 13px; text-align: left; font-weight: 900; color: green;">{{ _data.rank }}</strong> in {{ _data.topLevelCategory }}</span><br>
 					<span class="prod-reviews"><strong style="color: #ca7c1b">{{ _data.ratings }}</strong> | <strong>{{ _data.reviewCount }} reviews</strong></span><br>
 					<div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
 						<meta itemprop="priceCurrency" content="USD" />
